triggering the animation once images are loaded. Wasn't playing correctly on safari earlier

--- a/docs/assets/style.css
+++ b/docs/assets/style.css
@@ -540,6 +540,9 @@ section.supportus {
 
 .avatar-row {
   width: max-content;
+}
+
+.infinite-scroll {
   animation: 48s linear 0s infinite normal none running scroll;
 }
 
